--- a/upgradeController.yml
+++ b/upgradeController.yml
@@ -1,9 +1,8 @@
 #ansible-playbook creadePool.yml
 - hosts: 10.91.55.5
-  connection: local
-  ansible_connection: ssh 
-  ansible_ssh_user: admin 
-  ansible_ssh_pass: Avi123$%
+  connection: ssh 
+  ssh_user: admin 
+  ssh_pass: Avi123$%
 
   tasks:
     - name: Copy upgrade file
