--- a/removeWafPolicy.yml
+++ b/removeWafPolicy.yml
@@ -1,5 +1,5 @@
 ---
-#ansible-playbook applyWafPolicy.yml -e@vars/waf_vars.yml -e "vs_name=VS-NAME waf_policy_name=WafProfile"
+#ansible-playbook removeWafPolicy.yml -e@vars/waf_vars.yml -e "vs_name=VS-NAME"
 - hosts: localhost
   connection: local
   
@@ -18,19 +18,7 @@
         params:
           name: "{{ vs_name }}"
       register: vs_info
-    
-    - name: Get WAF Profile info "{{ waf_policy_name }}"
-      avi_api_session:
-        username: "{{ username }}"
-        password: "{{ password }}"
-        controller: "{{ controller }}"
-        api_version: "{{ api_version }}"
-        http_method: get
-        path: wafpolicy
-        params:
-          name: "{{ waf_policy_name }}"
-      register: waf_profile_info
-
+  
     - name: Update VS "{{ vs_name }}" with "{{ waf_policy_name }}
       avi_virtualservice:
         controller: "{{ controller }}"
@@ -38,10 +26,10 @@
         password: "{{ password }}"
         api_version: "{{ api_version }}"
         avi_api_update_method: patch
-        avi_api_patch_op: add
+        avi_api_patch_op: delete
         #waf_policy_ref: '{{ lookup(waf_profile_info.obj, "uuid") }}'
         #waf_policy_ref: /api/wafpolicy?name="{{ waf_policy_name }}"
-        waf_policy_ref: "{{ waf_profile_info['obj']['results'][0]['uuid'] }}"
+        waf_policy_ref: ""
         #uuid: "{{ lookup(vs_info.obj, 'uuid') }}"
         name: "{{ vs_name }}"
         uuid: "{{ vs_info['obj']['results'][0]['uuid'] }}"
