--- a/configCloud.yml
+++ b/configCloud.yml
@@ -2,38 +2,6 @@
 #ansible-playbook configCloud.yml -e "controller=10.10.29.250"
 - hosts: localhost
   connection: local
-  vars:
-    controller: 10.91.55.10
-    username: admin
-    password: Avi123$%
-    api_version: 17.2.7
-    vcenter_url: "10.10.2.10"
-    vcenter_user: root
-    vcenter_pwd: vmware
-    tenant: admin
-    discovery_time: 120
-    vmware_cloud_name: vmwarecloud
-    cloud_datacenter: 10GTest
-    old_password: 58NFaGDJm(PJH0G
-    vmware_cluster_name: Arista
-    vm_mgmt_nw_name: PG-1055
-    vm_mgmt_nw_addr: 10.91.55.0
-    vm_mgmt_maskbits: 24
-    vm_mgmt_begin_addr: 10.91.55.100
-    vm_mgmt_end_addr: 10.91.55.200
-    vm_mgmt_dg: 10.91.55.1
-
-    vrf_gw_mon_ip: 10.91.29.1
-    vrf_name: VRF-GSLB
-    prefix_name: luiz
-    vcenter_folder: luiz
-    network_name: PG-1029
-    net_address: 10.91.29.0
-    net_maskbits: 24
-    beg_addr: 10.91.29.101
-    end_addr: 10.91.29.250
-    service_engine_group_name: SEGGSLB
-
 
   roles:
     - { role: avinetworks.avicontroller-vmware }
@@ -48,13 +16,13 @@
           cloud:
             - name: "{{ vmware_cloud_name }}"
               vtype: CLOUD_VCENTER
-              tenant_ref: '/api/tenant/?name={{ tenant }}'
+              tenant_ref: '/api/tenant/?name={{ vmware_tenant }}'
               dhcp_enabled: false
               license_type: "LIC_CORES"
               vcenter_configuration:
                 username: "{{ vcenter_user }}"
                 password: "{{ vcenter_pwd }}"
-                datacenter: "{{ cloud_datacenter }}"
+                datacenter: "{{ vmware_connector_datacenter }}"
                 management_network: "/api/vimgrnwruntime/?name={{ vm_mgmt_nw_name }}"
                 privilege: "WRITE_ACCESS"
                 vcenter_url: "{{ vcenter_url }}"
