--- a/configDataNetwork.yml
+++ b/configDataNetwork.yml
@@ -2,26 +2,6 @@
 #ansible-playbook configCloud.yml -e "controller=10.10.29.250"
 - hosts: localhost
   connection: local
-  vars:
-    controller: 10.91.55.11
-    username: admin
-    password: Avi123$%
-    api_version: 17.2.7
-    tenant: admin
-    vmware_cloud_name: vmwarecloud
-    vcenter_folder: luiz
-    prefix_name: luiz
-    vmware_cluster_name: Arista
-
-    vrf_gw_mon_ip: 10.91.29.1
-    vrf_name: VRF-GSLB
-    network_name: PG-1030
-    net_address: 10.91.30.0
-    net_maskbits: 24
-    beg_addr: 10.91.30.100
-    end_addr: 10.91.30.249
-    service_engine_group_name: SEGGSLB
-
 
   roles:
     - { role: avinetworks.avicontroller-vmware }
@@ -35,7 +15,7 @@
           vrfcontext:
             - name: "{{ vrf_name }}"
               cloud_ref: "/api/cloud/?name={{ vmware_cloud_name }}"
-              tenant_ref: "/api/tenant/?name={{ tenant }}"
+              tenant_ref: "/api/tenant/?name={{ vrf_tenant }}"
               gateway_mon:
               - cloud_ref: "/api/cloud/?name={{ vmware_cloud_name }}"
                 gateway_ip:
@@ -58,41 +38,41 @@
 
           # Network Object for Data
           network:
-            - name: "{{ network_name }}"
+            - name: "{{ vrf_network_name }}"
               vrf_context_ref: "/api/vrfcontext/?name={{ vrf_name }}"
-              tenant_ref: "/api/tenant/?name=admin"
+              tenant_ref: "/api/tenant/?name={{ vrf_tenant }}"
               cloud_ref: "/api/cloud/?name={{ vmware_cloud_name }}"
               configured_subnets:
               - prefix:
                   ip_addr:
                     type: V4
-                    addr: "{{ net_address }}"
-                  mask: "{{ net_maskbits }}"
+                    addr: "{{ vrf_net_address }}"
+                  mask: "{{ vrf_net_maskbits }}"
                 static_ranges:
                 - begin:
                     type: V4
-                    addr: "{{ beg_addr }}"
+                    addr: "{{ vrf_beg_addr }}"
                   end:
                     type: V4
-                    addr: "{{ end_addr }}"
+                    addr: "{{ vrf_end_addr }}"
               exclude_discovered_subnets: false
-              vimgrnw_ref: "/api/vimgrnwruntime/?name={{ network_name }}"
+              vimgrnw_ref: "/api/vimgrnwruntime/?name={{ vrf_network_name }}"
               synced_from_se: false
               dhcp_enabled: false
               vcenter_dvs: true
 
           #  Service Engine Group
           serviceenginegroup:
-            - name: "{{ service_engine_group_name }}"
+            - name: "{{ se_group_name }}"
               cloud_ref: "/api/cloud/?name={{ vmware_cloud_name }}"
               vcenter_folder: "{{ vcenter_folder }}"
               vcenter_clusters:
                 cluster_refs:
-                  - "/api/vimgrclusterruntime/?name={{ vmware_cluster_name }}"
+                  - "/api/vimgrclusterruntime/?name={{ se_vmware_cluster_name }}"
                 include: True
               max_se: 4
               buffer_se: 0
-              se_name_prefix: "{{ prefix_name }}"
+              se_name_prefix: "{{ se_name_prefix }}"
 
     - name: Configure Data Network
       import_role:
