--- a/configGSLB.yml
+++ b/configGSLB.yml
@@ -2,30 +2,6 @@
 #ansible-playbook configGSLB.yml -e "controller=10.10.29.250"
 - hosts: localhost
   connection: local
-  vars:
-    controller: 10.91.55.11
-    username: admin
-    password: Avi123$%
-    api_version: 17.2.7
-    sitename: site01
-    domain: gslb.teste.com
-    gslb_controller: 10.91.55.11
-    gslb_fullname: "Gslb Service User"
-    gslb_username: gslb
-    gslb_password: Gslb2018
-
-    vmware_cloud_name: "vmwarecloud"
-    vs_name: VS-GSLB
-    port_num: 53
-    vs_ip: 10.91.30.11
-    app_profile_name: System-DNS
-    vrf_name: VRF-GSLB
-    tenant_name: admin
-    vmwarecloudname: vmwarecloud
-    service_engine_name: SEGGSLB
-    vip_network_address: 10.91.30.0
-    vip_netmask_bits: 24
-    network_name: PG-1030
 
   roles:
     - role: avinetworks.avisdk
@@ -43,8 +19,9 @@
         params:
           name: "{{ gslb_username }}"
       register: user_exists
-    - name: Existing User
-      debug: msg="{{ user_exists}}"
+
+#    - name: Existing User
+#      debug: msg="{{ user_exists }}"
 
     - name: "If user {{ gslb_username }} doesn't exist create it on Avi"
       avi_api_session:
@@ -60,7 +37,7 @@
           password: "{{ gslb_password}}"
           access:
             - role_ref: "/api/role?name=System-Admin"
-              tenant_ref: "/api/tenant?name={{ tenant_name }}"
+              tenant_ref: "/api/tenant?name={{ gslb_tenant }}"
           user_profile_ref: "/api/useraccountprofile?name=No-Lockout-User-Account-Profile"
       when: user_exists.obj.count == 0
 
@@ -70,14 +47,16 @@
         username: "{{ username }}"
         password: "{{ password }}"
         api_version: "{{ api_version }}"
+        avi_api_update_method: patch
+        avi_api_patch_op: add
         name: "{{ vs_name }}"
         services:
             - port: "{{ port_num }}"
-        application_profile_ref: '/api/applicationprofile?name={{ app_profile_name }}'
-        vrf_context_ref: "/api/vrfcontext/?name={{ vrf_name }}"
-        tenant_ref: "/api/tenant/?name={{ tenant_name }}"
-        cloud_ref: "/api/cloud?name={{ vmwarecloudname }}"
-        se_group_ref: "/api/serviceenginegroup/?name={{ service_engine_name }}"
+        application_profile_ref: '/api/applicationprofile?name=System-DNS'
+        vrf_context_ref: "/api/vrfcontext/?name={{ vs_vrf_name }}"
+        tenant_ref: "/api/tenant/?name={{ gslb_tenant }}"
+        cloud_ref: "/api/cloud?name={{ vs_vmware_cloud_name }}"
+        se_group_ref: "/api/serviceenginegroup/?name={{ vs_SEG_name }}"
         vip:
             -
               vip_id: 0
@@ -94,11 +73,11 @@
                 -
                     subnet:
                         -
-                            mask: "{{ vip_netmask_bits }}"
+                            mask: "{{ vs_ip_netmask_bits }}"
                             ip_addr:
                                 type: V4
-                                addr: "{{ vip_network_address }} "
-                    network_ref: '/api/network/?name={{ network_name }}'
+                                addr: "{{ vs_ip_network_address }} "
+                    network_ref: '/api/network/?name={{ vs_network_name }}'
 
     - name: Get VS info "{{ vs_name }}"
       avi_api_session:
@@ -144,14 +123,14 @@
           username: "{{ gslb_username }}"
           password: "{{ gslb_password }}"
         send_interval: 30
-        name: "{{ sitename }}"
+        name: "{{ gslb_sitename }}"
         dns_configs:
-        - domain_name: "{{ domain }}"
+        - domain_name: "{{ gslb_domain }}"
         leader_cluster_uuid: "{{ cluster_info['obj'].uuid }}"
         third_party_sites:
           - 
             enabled: true
-            name: "{{ sitename }}_outside"
+            name: "{{ gslb_sitename }}_outside"
             hm_proxies:
               - 
                 site_uuid: "{{ cluster_info['obj'].uuid }}"
