--- a/vars/luiz-55-gslb.yml
+++ b/vars/luiz-55-gslb.yml
@@ -65,13 +65,13 @@ gslb_tenant: "{{ tenant }}"
 vs_vmware_cloud_name: "{{ vmware_cloud_name }}"
 vs_SEG_name: "{{ se_group_name }}"
 vs_ip_netmask_bits: 24
-vs_ip_network_address: 10.91.30.0
-vs_ip: 10.91.30.11
+vs_ip_network_address: 10.91.29.0
+vs_ip: 10.91.29.11
 vs_network_name: "{{ vrf_network_name }}" 
 
-gslb_sitename: site01
-gslb_domain: gslb.teste.com
-gslb_controller: 10.91.55.11
-gslb_fullname: "Gslb Service User"
-gslb_username: gslb
-gslb_password: Gslb2018
+gslb_leader_sitename: site01
+gslb_leader_domain: gslb.teste.com
+gslb_leader_controller: 10.91.55.11
+gslb_leader_fullname: "Gslb Service User"
+gslb_leader_username: gslb
+gslb_leader_password: Gslb2018
