--- a/deployControllers.yml
+++ b/deployControllers.yml
@@ -9,10 +9,10 @@
     - { role: avinetworks.avisdk }
 
   tasks:
-    - name: Include vars
-      include_vars:
-        file: vars/env_vars.yml
-        
+#    - name: Include vars
+#      include_vars:
+#        file: vars/env_vars.yml
+
     - name: Deploy Avi Controller "{{ vm_name }}"
       deploy_controller:
         state: "{{ state | default('present')}}"
