--- a/vars/luiz-55.12-gslb.yml
+++ b/vars/luiz-55.12-gslb.yml
@@ -20,6 +20,11 @@ controller: "{{ mgmt_ip }}"
 username: admin
 api_version: 17.2.10
 password: Avi123$%
+avi_credentials:
+  username: "{{ username }}"
+  password: "{{ password }}"
+  controller: "{{ controller }}"
+  api_version: "{{ api_version }}"
 old_password: 58NFaGDJm(PJH0G
 from_email: admin@avinetworks.com
 search_domains: ""
